# cards

./: cabal.project.local  cards.cabal  fourmolu.yaml
.github/workflows/: haskell.yml
app/: Main.hs
lib/: Cards.hs  Klondike.hs
