cabal-version:   3.0
name:            cards
version:         0.1.0.0
license:         NONE
author:          ilmari.vacklin@iki.fi
maintainer:      Ilmari Vacklin
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable cards
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.1.0
    hs-source-dirs:   app
    default-language: GHC2021
