cabal-version:   3.0
name:            cards
version:         0.1.0.0
license:
author:          ilmari.vacklin@iki.fi
maintainer:      Ilmari Vacklin
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall -Werror=missing-fields

common settings
  ghc-options:        -threaded
  default-language:   GHC2021
  default-extensions: LambdaCase

common dependencies
  build-depends: base

executable cards
  import:         warnings, settings, dependencies
  main-is:        Main.hs
  build-depends:  cards
  hs-source-dirs: app

library
  import:          warnings, settings, dependencies
  hs-source-dirs:  lib
  build-depends:
    , base
    , random
    , random-shuffle

  exposed-modules:
    Cards
    Klondike
