cabal-version: 3.0
name:          cards
version:       0.1.0.0
license:
author:        ilmari.vacklin@iki.fi
maintainer:    Ilmari Vacklin
build-type:    Simple

common warnings
  ghc-options: -Wall -Werror=missing-fields

common settings
  ghc-options:        -threaded
  default-language:   GHC2021
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    ExplicitNamespaces
    LambdaCase
    OverloadedRecordDot
    TypeFamilies
    ViewPatterns

common dependencies
  build-depends: base

executable cards-exe
  import:         warnings, settings, dependencies
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:
    , cards
    , random

library
  import:          warnings, settings, dependencies
  hs-source-dirs:  lib
  build-depends:
    , finite-typelits
    , random
    , random-shuffle
    , vector
    , vector-sized

  exposed-modules:
    Cards
    Klondike
